# rustnn

./: Cargo.toml  README.md
data/: deep_nn_l2.model  simple_nn.model
src/: main.rs
src/basic_nn/: predict.rs  train.rs
src/libnn/: activation.rs  cost.rs  deep_nn.rs  layer.rs  lib.rs  mnist_loader.rs  network.rs  simple_nn.rs  test.rs
src/simple_nn/: predict.rs  train.rs
