[package]
name = "neural-nets-from-scratch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_train"
path = "src/basic_nn/train.rs"


[[bin]]
name = "basic_predict"
path = "src/basic_nn/predict.rs"

[lib]
name = "libnn"
path = "src/libnn/lib.rs"

[dependencies]
anyhow = "1.0.82"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
image = "0.25.1"
show-image = "0.14.0"
rand = "0.8.5"
netlib-src = "0.8.0"  # Required for ndarray
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.8" # For fancy CLI progress bars
console = "0.15.8"  # For fancy CLI interfaces
